--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -8,14 +8,54 @@
     </head>
 
     <body>
-        
-        {% if not layout or layout == "1" %}
-        <!-- Icons w/o title -->
-            <div class="flex-this {% if align == 'right' %}flex-end{% else %}flex-start{% endif%} wrap w-100 margin-top-1">
+        <div class="flex-this {% if align == 'right' %}flex-end{% else %}flex-start{% endif%} wrap w-100" style="padding: 8px;padding-bottom: 0px;">
+            {% if not layout or layout == "1" %}
+                <!-- Icons w/o title -->
+                <div>
+                    {% if notices %}
+                        {% for notice in notices %}
+                            <img loading="lazy" class="img-sizedown-small pointer" src="{{ notice.img_url }}" alt="" style="margin:8px;">
+                        {% endfor %}
+                    {% endif %}
+
+                    {% if project.has_bclabels or project.has_tklabels %}
+                        {% for community, labels in label_groups.items %}
+                            {% for tklabel in labels.tk_labels %}
+                                <img loading="lazy" class="img-sizedown-small pointer" src="{{ tklabel.img_url }}" alt="" style="margin:8px;">
+                            {% endfor %}
+                            {% for bclabel in labels.bc_labels %}
+                                <img loading="lazy" class="img-sizedown-small pointer" src="{{ bclabel.img_url }}" alt="" style="margin:8px;">
+                            {% endfor %}
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            {% endif%}
+            
+            {% if layout == "2" %}
+                <!-- Icons w/ title -->
                 {% if notices %}
                     {% for notice in notices %}
-                        <div class="margin-left-1 margin-right-1">
-                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="https://storage.googleapis.com/local-contexts-hub-develop.appspot.com/labels/notices/tk-notice.png" alt="">
+                        <div class="flex-this column center-text" style="max-width: 175px;">
+                            {% if not lang or lang == 'en' %}
+                                <div style="margin: 8px;">
+                                    <img loading="lazy" class="pointer" width="119px" src="{{ notice.img_url }}" alt="">
+                                    <p class="margin-top-8 font-size-14">
+                                        {% if notice.notice_type == 'traditional_knowledge' %} Traditional Knowledge Notice{% endif %}
+                                        {% if notice.notice_type == 'biocultural' %} Biocultural Notice{% endif %}
+                                        {% if notice.notice_type == 'attribution_incomplete' %} Attribution Incomplete Notice{% endif %}
+                                    </p>
+                                </div>
+                                
+                            {% else %}
+                                {% for translation in notice.notice_translations.all %}
+                                    {% if lang == translation.language_tag %}
+                                        <div style="margin: 8px;">
+                                            <img loading="lazy" class="pointer" width="119px" src="{{ notice.img_url }}" alt="">
+                                            <p class="margin-top-8 font-size-14">{{ translation.translated_name }}</p>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
                         </div>
                     {% endfor %}
                 {% endif %}
@@ -23,121 +63,52 @@
                 {% if project.has_bclabels or project.has_tklabels %}
                     {% for community, labels in label_groups.items %}
                         {% for tklabel in labels.tk_labels %}
-                            <div class="margin-left-1 margin-right-1">
-                                <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ tklabel.img_url }}" alt="">
-                            </div>
-                        {% endfor %}
-                        {% for bclabel in labels.bc_labels %}
-                            <div class="margin-left-1 margin-right-1">
-                                <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ bclabel.img_url }}" alt="">
-                            </div>
-                        {% endfor %}
-                    {% endfor %}
-                {% endif %}
-            </div>
-        {% endif%}
-
-        
-        {% if layout == "2" %}
-        <!-- Icons w/ title -->
-            <div class="flex-this wrap w-100">
-                {% if notices %}
-                    {% for notice in notices %}
-                        {% if not lang or lang == 'en' %}
-                            <div class="flex-this column center-text w-20 margin-left-8 margin-right-8 margin-top-1">
-                                <div class="margin-left-1 margin-right-1">
-                                    <img loading="lazy" class="w-100 pointer" style="max-width:150px;min-width:50px;padding:5px;" src="{{ notice.img_url }}" alt="">
-                                </div>
-                                <div class="margin-left-1 margin-right-1">
-                                    <p class="margin-top-8 margin-bottom-8 font-size-14">
-                                        {% if notice.notice_type == 'traditional_knowledge' %} Traditional Knowledge Notice{% endif %}
-                                        {% if notice.notice_type == 'biocultural' %} Biocultural Notice{% endif %}
-                                        {% if notice.notice_type == 'attribution_incomplete' %} Attribution Incomplete Notice{% endif %}
-                                    </p>
-                                </div>
-                            </div>
-                        
-                        {% else %}
-                            {% for translation in notice.notice_translations.all %}
-                                {% if lang == translation.language_tag %}
-                                    <div class="flex-this column center-text w-20 margin-left-8 margin-right-8 margin-top-1">
-                                        <div class="margin-left-1 margin-right-1">
-                                            <img loading="lazy" class="w-100 pointer" style="max-width:150px;min-width:50px;padding:5px;" src="{{ notice.img_url }}" alt="">
-                                        </div>
-                                        <div class="margin-left-1 margin-right-1">
-                                            <p class="margin-top-8 margin-bottom-8 font-size-14">{{ translation.translated_name }}</p>
-                                        </div>
+                            <div class="flex-this column center-text" style="max-width: 175px;">
+                                {% if not lang or lang == 'en' %}
+                                    <div style="margin: 8px;">
+                                        <img loading="lazy" class="pointer" width="119px" src="{{ tklabel.img_url }}" alt="">
+                                        <p class="margin-top-8 font-size-14">{{ tklabel.name }}</p>
                                     </div>
+
+                                {% else %}
+                                    {% for translation in tklabel.tklabel_translation.all %}
+                                        {% if lang == translation.language_tag %}
+                                            <div style="margin: 8px;">
+                                                <img loading="lazy" class="pointer" width="119px" src="{{ tklabel.img_url }}" alt="">
+                                                <p class="margin-top-8 font-size-14">{{ translation.translated_name }}</p>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
                                 {% endif %}
-                            {% endfor %}
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}
-
-                {% if project.has_bclabels or project.has_tklabels %}
-                    {% for community, labels in label_groups.items %}
-                        {% for tklabel in labels.tk_labels %}
-                            {% if not lang or lang == 'en' %}
-                                <div class="flex-this column center-text w-20 margin-left-8 margin-right-8 margin-top-1">
-                                    <div class="margin-left-1 margin-right-1">
-                                        <img loading="lazy" class="w-100 pointer" style="max-width:150px;min-width:50px;padding:5px;" src="{{ tklabel.img_url }}" alt="">
-                                    </div>
-                                    <div class="margin-left-1 margin-right-1">
-                                            <p class="margin-top-8 margin-bottom-8 font-size-14">{{ tklabel.name }}</p>
-                                    </div>
-                                </div>
-
-                            {% else %}
-                                {% for translation in tklabel.tklabel_translation.all %}
-                                    {% if lang == translation.language_tag %}
-                                        <div class="flex-this column center-text w-20 margin-left-8 margin-right-8 margin-top-1">
-                                            <div class="margin-left-1 margin-right-1">
-                                                <img loading="lazy" class="w-100 pointer" style="max-width:150px;min-width:50px;padding:5px;" src="{{ tklabel.img_url }}" alt="">
-                                            </div>
-                                            <div class="margin-left-1 margin-right-1">
-                                                    <p class="margin-top-8 margin-bottom-8 font-size-14">{{ translation.translated_name }}</p>
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
+                            </div>
                         {% endfor %}
 
                         {% for bclabel in labels.bc_labels %}
-                            {% if not lang or lang == 'en' %}
-                                <div class="flex-this column center-text w-20 margin-left-8 margin-right-8 margin-top-1">
-                                    <div class="margin-left-1 margin-right-1">
-                                        <img loading="lazy" class="w-100 pointer" style="max-width:150px;min-width:50px;padding:5px;" src="{{ bclabel.img_url }}" alt="">
+                            <div class="flex-this column center-text" style="max-width: 175px;">
+                                {% if not lang or lang == 'en' %}
+                                    <div style="margin: 8px;">
+                                        <img loading="lazy" class="pointer" width="119px" src="{{ bclabel.img_url }}" alt="">
+                                        <p class="margin-top-8 font-size-14">{{ bclabel.name }}</p>
                                     </div>
-                                    <div class="margin-left-1 margin-right-1">
-                                            <p class="margin-top-8 margin-bottom-8 font-size-14">{{ bclabel.name }}</p>
-                                    </div>
-                                </div>
 
-                            {% else %}
-                                {% for translation in bclabel.bclabel_translation.all %}
-                                    {% if lang == translation.language_tag %}
-                                        <div class="flex-this column center-text w-20 margin-left-8 margin-right-8 margin-top-1">
-                                            <div class="margin-left-1 margin-right-1">
-                                                <img loading="lazy" class="w-100 pointer" style="max-width:150px;min-width:50px;padding:5px;" src="{{ bclabel.img_url }}" alt="">
+                                {% else %}
+                                    {% for translation in bclabel.bclabel_translation.all %}
+                                        {% if lang == translation.language_tag %}
+                                            <div style="margin: 8px;">
+                                                <img loading="lazy" class="pointer" width="119px" src="{{ bclabel.img_url }}" alt="">
+                                                <p class="margin-top-8 font-size-14">{{ translation.translated_name }}</p>
                                             </div>
-                                            <div class="margin-left-1 margin-right-1">
-                                                    <p class="margin-top-8 margin-bottom-8 font-size-14">{{ translation.translated_name }}</p>
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
                         {% endfor %}
                     {% endfor %}
                 {% endif %}
-            </div>
-        {% endif%}
-
-        
-        {% if layout == "3" %}
-        <!-- Full Text -->
-            <div class="flex-this wrap w-100">
+            {% endif%}
+            
+            {% if layout == "3" %}
+                <!-- Full Text -->
                 {% if notices %}
                     {% for notice in notices %}
                         {% if not lang or lang == 'en' %}
@@ -239,20 +210,18 @@
                             {% endif %}
                         {% endfor %}
                     {% endfor %}
-                {% endif %}
-            </div>
-        {% endif %}
+                {% endif %}    
+            {% endif %}
+        </div>
 
-        <div class="flex-this wrap w-100 {% if align == 'right' %}flex-end{% endif %}">
-            <div class="flex-this ">
-                <div class="margin-left-8 margin-right-8 padding-bottom-1 pad-top-1" style="display: inherit;">
-                    <a href="https://localcontexts.org" style="display: inline-flex;">
-                        <img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon">
-                    </a>
-                </div>
-                <div class="auto-margin font-size-14 margin-right-8">
-                    <a id="project-link" class="darkteal-text underline-hover bold" target="_blank" href="{{project.project_page}}">Local Contexts Project: {{project.title}}</a>
-                </div>
+        <div class="flex-this wrap w-100 {% if align == 'right' %}flex-end{% else %}flex-start{% endif%}" style="padding: 8px; padding-top: 0px;">
+            <div class="margin-left-8 margin-right-8" style="display: inherit;">
+                <a href="https://localcontexts.org" style="display: inline-flex;">
+                    <img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon">
+                </a>
+            </div>
+            <div class="font-size-14 align-center flex-this margin-right-8">
+                <a id="project-link" class="darkteal-text underline-hover bold" target="_blank" href="{{project.project_page}}">Local Contexts Project: {{project.title}}</a>
             </div>
         </div>
     </body>
