--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -1,6 +1,6 @@
 {% load static %}
 <style>
-    #region-container{
+    .region-container{
         margin-top: 20px;
     }
     #region-results-wrapper{
@@ -59,7 +59,7 @@
         margin-left: 6px;
         width: 120px
     }
-    #browse-files-container{
+    .browse-files-container{
         margin-top: 10px;
     }
 
@@ -115,72 +115,74 @@
         visibility: hidden;
     }
 
-    #save-cancel-container {
+    .save-cancel-container {
         margin-top: 20px;
     }
 </style>
-<div id="region-container">
-    <label class="pad-top-1-5">Search the Native Land Digital database</label><br>
-    <div id="community-boundary-search">
-        <input class="input-field search" type="text"
-               placeholder="Search by address, community name or town"
-        >
-        <i class="fa fa-search icon"></i>
-    </div>
-    <div id="region-results-wrapper">
-        <div id="region-results"></div>
-    </div>
-</div>
-<div id="browse-files-container">
-            <label class="pad-top-1-5">Upload shape file (. zip)</label><br>
-            <div id="community-boundary-upload">
-                <input class="input-field" type="text"
-                       id="select-file-input"
-                       placeholder="Select file"
-                       readonly
-                       onclick="triggerShapeFileInput()"
-                >
-                <div
-                    id="browse-files-btn"
-                    class="primary-btn action-btn"
-                    onclick="triggerShapeFileInput()"
-                >
-                    Browse files
-                </div>
-                <input
-                    type="file" id="shapefile-input" name="shapefile" style="display: none"
-                    onchange="uploadShapeFileData(this)"
-                    accept=".zip"
-                >
-            </div>
+<span class="boundary-selection-unit">
+    <div class="region-container">
+        <label class="pad-top-1-5">Search the Native Land Digital database</label><br>
+        <div id="community-boundary-search">
+            <input class="input-field search" type="text"
+                   placeholder="Search by address, community name or town"
+            >
+            <i class="fa fa-search icon"></i>
         </div>
-<div id="selected-location">
-        <br>
-        <strong>
-            <label class="pad-top-1-5">Selected Location</label>
-        </strong><br>
+        <div id="region-results-wrapper">
+            <div id="region-results"></div>
+        </div>
+    </div>
+    <div class="browse-files-container">
+                <label class="pad-top-1-5">Upload shape file (. zip)</label><br>
+                <div id="community-boundary-upload">
+                    <input class="input-field" type="text"
+                           id="select-file-input"
+                           placeholder="Select file"
+                           readonly
+                           onclick="triggerShapeFileInput()"
+                    >
+                    <div
+                        id="browse-files-btn"
+                        class="primary-btn action-btn"
+                        onclick="triggerShapeFileInput()"
+                    >
+                        Browse files
+                    </div>
+                    <input
+                        type="file" id="shapefile-input" name="shapefile" style="display: none"
+                        onchange="uploadShapeFileData(this)"
+                        accept=".zip"
+                    >
+                </div>
+            </div>
+    <div class="selected-location">
+            <br>
+            <strong>
+                <label class="pad-top-1-5">Selected Location</label>
+            </strong><br>
 
-        <div id="selected-title-wrapper">
-            <div id="selected-title">Place Holder</div>
-            <a id="nld-link" target="_blank">
-                View Location in NLD &nbsp;
-                <i class="fa fa-arrow-up-right-from-square"></i>
+            <div id="selected-title-wrapper">
+                <div id="selected-title">Place Holder</div>
+                <a id="nld-link" target="_blank">
+                    View Location in NLD &nbsp;
+                    <i class="fa fa-arrow-up-right-from-square"></i>
+                </a>
+            </div>
+
+        </div>
+    <div class="save-cancel-container w-90 flex-this flex-start">
+        <div>
+            <a
+                id="community-boundary-continue-btn"
+                class="primary-btn action-btn disabled-btn margin-right-8"
+                href="{% url 'confirm-community' %}"
+                onclick="event.preventDefault()"
+            >
+                Change Boundaries
             </a>
         </div>
-
+        <div id="skip-this-step">
+            <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Cancel</a>
+        </div>
     </div>
-<div id="save-cancel-container" class="w-90 flex-this flex-start">
-    <div>
-        <a
-            id="community-boundary-continue-btn"
-            class="primary-btn action-btn disabled-btn margin-right-8"
-            href="{% url 'confirm-community' %}"
-            onclick="event.preventDefault()"
-        >
-            Change Boundaries
-        </a>
-    </div>
-    <div id="skip-this-step">
-        <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Cancel</a>
-    </div>
-</div>
+</span>
