--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -70,11 +70,11 @@
         top: 14px;
     }
 
-    .hidden{
-        visibility: hidden;
+    .invisible{
+        display: none !important;
     }
 
-    #browse-files-btn{
+    .browse-files-btn{
         margin-left: 6px;
         width: 120px
     }
@@ -82,19 +82,19 @@
         margin-top: 10px;
     }
 
-    #community-boundary-upload {
+    .community-boundary-upload {
         position: relative;
         display: flex;
     }
 
-    #community-boundary-upload input{
+    .community-boundary-upload input{
         width: calc(100% - 120px);
         padding: 24px;
         padding-left: 10px;
         cursor: pointer;
     }
 
-    #community-boundary-search i{
+    .community-boundary-search i{
         position: absolute;
         right: 10px;
         top: 14px;
@@ -111,6 +111,17 @@
         font-size: 24px;
         margin-right: 12px;
     }
+    .failure {
+        color: #B01212;
+        background: #FBF3F3;
+        border: #B0120B 1px solid;
+    }
+    .success {
+        color: #166534;
+        background: #F2F7F4;
+        border: #166534 1px solid;
+    }
+
     .save-cancel-container {
         margin-top: 20px;
     }
@@ -129,29 +140,28 @@
         </div>
     </div>
     <div class="browse-files-container">
-                <label class="pad-top-1-5">Upload shape file (. zip)</label><br>
-                <div id="community-boundary-upload">
-                    <input class="input-field" type="text"
-                           id="select-file-input"
+                <label class="pad-top-1-5">Upload shapefile (. zip)</label><br>
+                <div class="community-boundary-upload">
+                    <input type="text"
+                           class="input-field select-file-input"
                            placeholder="Select file"
                            readonly
-                           onclick="triggerShapeFileInput()"
+                           onclick="triggerShapeFileInput(this)"
                     >
                     <div
-                        id="browse-files-btn"
-                        class="primary-btn action-btn"
-                        onclick="triggerShapeFileInput()"
+                        class="browse-files-btn primary-btn action-btn"
+                        onclick="triggerShapeFileInput(this)"
                     >
                         Browse files
                     </div>
                     <input
-                        type="file" id="shapefile-input" name="shapefile" style="display: none"
+                        type="file" class="shapefile-input" name="shapefile" style="display: none"
                         onchange="uploadShapeFileData(this)"
                         accept=".zip"
                     >
                 </div>
             </div>
-    <div class="selected-location">
+    <div class="selected-location invisible">
             <br>
             <strong>
                 <label class="pad-top-1-5">Selected Location</label>
@@ -166,6 +176,15 @@
             </div>
 
         </div>
+    <div class="feedback failure invisible">
+        <i class="fa fa-circle-exclamation"></i>
+        <div class="message">File not accepted. Please upload another file</div>
+    </div>
+    <div class="feedback success invisible">
+        <i class="fa fa-circle-check"></i>
+        <div class="message">File upload successfully</div>
+    </div>
+
     <div class="save-cancel-container w-90 flex-this flex-start">
         <div>
             <a
@@ -183,7 +202,7 @@
     </div>
 </span>
 <script>
-  fetch('https://native-land.ca/wp-json/nativeland/v1/map-list').then(resp => resp.json()).then(response => {
+    fetch('https://native-land.ca/wp-json/nativeland/v1/map-list').then(resp => resp.json()).then(response => {
 
     document.querySelector('.region-container input.search').addEventListener("keyup", (event) => {
         let html = ''
@@ -219,10 +238,13 @@
        document.querySelector('.region-results').innerHTML = ''
     }
     function showSelectedSlug() {
-        document.querySelector('.selected-location').classList.remove('hidden')
+        document.querySelector('.selected-location').classList.remove('invisible')
     }
     function enableContinueButton(){
         document.querySelector('#community-boundary-continue-btn').classList.remove('disabled-btn')
+    }
+    function disableContinueButton(){
+        document.querySelector('#community-boundary-continue-btn').classList.add('disabled-btn')
     }
 
     function selectSlug(self) {
@@ -239,5 +261,112 @@
         hideSearchDropDown()
         showSelectedSlug()
         enableContinueButton()
+
+        // hide feedback messages
+        selectionUnit.querySelector('.feedback').classList.add('invisible')
     }
+
+    // code below mostly for shapefile
+
+    function triggerShapeFileInput(self) {
+        self.closest('.boundary-selection-unit').querySelector('.shapefile-input').click()
+    }
+
+    async function registerBoundary(boundaryName, boundary, removePreexisting=true) {
+    const payload = {
+        source: 'shape-file',
+        name: boundaryName,
+        boundary: boundary,
+        remove_previous: removePreexisting
+    }
+
+    // do post call to set boundary in request
+    const registrationResponse = await fetch("{% url 'registration-boundary' %}", {
+            method: 'POST',
+            body: JSON.stringify(payload),
+            headers: {
+              'X-CSRFToken': '{{csrf_token}}'
+            }
+        })
+
+        if (registrationResponse.status !== 201) {
+            throw new Error('Error Setting boundary')
+        }
+
+    }
+
+    async function resetboundary(){
+        // when setting boundary fails, the boundary are reset
+        await registerBoundary('No boundary', [], true)
+    }
+
+    async function uploadShapeFileData(self) {
+        var files = event.target.files
+        var file = files[0]
+        const successMessage = self.closest('.boundary-selection-unit').querySelector('.feedback.success')
+        const failureMessage = self.closest('.boundary-selection-unit').querySelector('.feedback.failure')
+
+        // hide feedback messages
+        successMessage.classList.add('invisible')
+        failureMessage.classList.add('invisible')
+        self.closest('.boundary-selection-unit').querySelector('.selected-location').classList.add('invisible')
+
+        try {
+          const shapeFileData = await file.arrayBuffer()
+          const geoJsonData = await shp(shapeFileData)
+
+          // merge geoJson to get unique contours
+          let listOfFeatures = geoJsonData.features
+          let fileName = geoJsonData.fileName
+
+          if (geoJsonData.length) {
+            // flatten features from multiple geoJson objects
+            fileName = geoJsonData[0].fileName
+            listOfFeatures = []
+            for (const geoJsonObject of geoJsonData) {
+              for (const featureIndex in geoJsonObject.features) {
+                listOfFeatures.push(geoJsonObject.features[featureIndex])
+              }
+            }
+          }
+
+          const firstBoundaryGeometry = listOfFeatures[0]
+          let firstBoundary = [].concat(...firstBoundaryGeometry.geometry.coordinates).map(arr => arr)
+
+          if (firstBoundaryGeometry.geometry.type === 'MultiPolygon') {
+              // when polygon is made up of multiple polygons, use the first
+              firstBoundary = firstBoundary[0]
+            }
+
+          if(listOfFeatures.length > 1) {
+              alert('Warning:\nThere is more than 1 boundary present. Only the first will be used.')
+            }
+          const distinctBoundaryReordered = firstBoundary.map(function(coordinate){
+              // reverse so code extracts (lat-lon)'s
+              return [coordinate[1], coordinate[0]]
+            }
+          )
+
+          // upload shapefile to session for community
+          await registerBoundary(fileName, distinctBoundaryReordered, i === 0)
+
+        successMessage.classList.toggle('invisible')
+        // show and label ui elements
+        self.closest('.boundary-selection-unit').querySelector('.selected-title').innerText = geoJsonData.fileName
+        self.closest('.boundary-selection-unit').querySelector('.selected-location').classList.remove('invisible')
+        enableContinueButton()
+
+      } catch (e) {
+        failureMessage.classList.toggle('invisible')
+        console.log('Error extracting boundary data from Shapefile', e)
+        disableContinueButton()
+        await resetboundary()
+      }
+        self.closest('.boundary-selection-unit').querySelector('.select-file-input').value = file.name
+        // set value to null so user can resubmit
+        // same file if needed
+        self.value = null
+        return false
+    }
+
 </script>
