--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -78,6 +78,13 @@
         #selected-title-wrapper{
             position: relative;
         }
+        #share-boundary-publicly-wrapper{
+            padding-top: 12px;
+
+        }
+        #share-boundary-publicly-wrapper input{
+            transform: scale(2);
+        }
         #selected-title{
             padding: 12px;
             border: 3px solid #007385;
@@ -163,6 +170,10 @@
             <i class="fa fa-circle-check"></i>
             <div class="message">File upload successfully</div>
         </div>
+        <div id="share-boundary-publicly-wrapper" class="invisible">
+            <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
+            <label for="share-boundary-publicly">Share Boundary Publicly</label>
+        </div>
     </div>
 
     <div class="flex-this w-90" id="buttonRow">
@@ -173,6 +184,7 @@
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
                     href="{% url 'confirm-community' %}"
+                    onclick="setShareBoundary(); event.preventDefault()"
                 >
                     Confirm location <i class="fa fa-arrow-right"></i>
                 </a>
@@ -227,10 +239,12 @@
         var file = files[0]
         const successMessage = document.querySelector('.feedback.success')
         const failureMessage = document.querySelector('.feedback.failure')
+        const sharePublicly = document.querySelector('#share-boundary-publicly-wrapper')
 
         // hide feedback messages
         successMessage.classList.add('invisible')
         failureMessage.classList.add('invisible')
+        sharePublicly.classList.add('invisible')
         document.querySelector('#selected-location').classList.add('invisible')
 
         try {
@@ -271,10 +285,10 @@
 
           // upload shapefile to session for community
           await registerBoundary(fileName, distinctBoundaryReordered, i === 0)
-
         successMessage.classList.toggle('invisible')
+        sharePublicly.classList.toggle('invisible')
         // show and label ui elements
-        document.querySelector('#selected-title').innerText = geoJsonData.fileName
+        document.querySelector('#selected-title').innerText = geoJsonData.fileName || 'Uploaded Shapefile'
         document.querySelector('#selected-location').classList.remove('invisible')
         enableContinueButton()
 
@@ -291,7 +305,32 @@
         return false
     }
 
+    async function setShareBoundary() {
+            try {
+                const payload = {
+                    share_boundary_publicly: document.getElementById("share-boundary-publicly").checked
+                }
 
+                // do post call to set boundary in request
+                const registrationResponse = await fetch("{% url 'registration-boundary' %}", {
+                        method: 'POST',
+                        body: JSON.stringify(payload),
+                        headers: {
+                          'X-CSRFToken': '{{csrf_token}}'
+                        }
+                    })
+
+                if (registrationResponse.status !== 201) {
+                    throw new Error('Error Setting boundary')
+                }
+
+                // relocate to the window href url
+              window.location.href = document.querySelector('#community-boundary-continue-btn').getAttribute('href')
+
+            } catch (error) {
+                console.error('Error Fetching boundary:', error)
+            }
+        }
     </script>
 <script src="{% static 'javascript/shpjs.js' %}"></script>
 {% endblock %}
